--- a/edgeR_script.r.erb
+++ b/edgeR_script.r.erb
@@ -1,32 +1,56 @@
-library("edgeR")
+library(tidyverse)
+library(edgeR)
 source("<%= x_seq_dir %>/RNAseq_plot_lib.r")
 
-data = read.table("./counts.matrix", header=T, row.names=1, com='')
-rnaseqMatrix = round(data)
-rnaseqMatrix = rnaseqMatrix[rowSums(rnaseqMatrix) >= <%= @sample_ids.size %>,]
-sampleIds <- c(<%= to_strings(@sample_ids) %>)
-groupIds  <- c(<%= to_strings(@group_ids) %>)
-conditions = factor(groupIds)
+sample_list   <- read_tsv("sample_list.txt", col_names = c("sampleIds", "groupIds"))
+counts_matrix <- read_tsv("./counts.matrix", skip = 1,
+                          col_names = c("GeneSymbol", sample_list$sampleIds))
 
-exp_study = DGEList(counts=rnaseqMatrix, group=conditions)
-exp_study = calcNormFactors(exp_study)
-exp_study$common.dispersion = 0.1
+data_df       <- column_to_rownames(counts_matrix, "GeneSymbol")
+rnaseqMatrix  <- round(data_df)
+rnaseqMatrix  <- rnaseqMatrix[rowSums(rnaseqMatrix) >= nrow(sample_list),]
 
-nc = cpm(exp_study, normalized.lib.sizes=TRUE)
+conditions  <- factor(sample_list$groupIds)
 
-colnames(nc) <- groupIds
-header <- c("GeneSymbol", sampleIds)
-normalized_counts <- rbind(header, cbind(rownames(nc), nc))
-write.table(normalized_counts, file="./results/normalized_counts.txt", sep="\t", quote=F, row.names=F, col.names=F)
-ncBoxPlot(nc, sampleIds)
+exp_study <- DGEList(counts = rnaseqMatrix, group = conditions)
+exp_study <- calcNormFactors(exp_study)
+
+nc <- cpm(exp_study, normalized.lib.sizes = TRUE)
+
+normalized_counts <- as_tibble(rownames_to_column(as.data.frame(nc), "GeneSymbol"))
+write_tsv(normalized_counts, "./results/normalized_counts.txt")
+ncBoxPlot(nc, sample_list$sampleIds)
+
+disp_table <- tibble("comp" = c(), "dispersion" = c())
 
 <% comp_list.each do |num, pair| %>
   # comp<%= num %>
-  et = exactTest(exp_study, pair=c(<%= to_strings(pair) %>))
-  tTags = topTags(et,n=NULL)
-  result_table <- data.frame(GeneSymbol = rownames(tTags), tTags)
-  colnames(result_table) <- c("GeneSymbol", "comp<%= num %>_logFC", "comp<%= num %>_logCPM", "comp<%= num %>_PValue", "comp<%= num %>_FDR")
-  write.table(result_table, file="./results/comp<%= num %>.edgeR.DE_results", sep="\t", quote=F, row.names=F)
-  ncScatterPlot(nc, <%= to_strings(pair) %>)
+  controls    <- sample_list %>% filter(groupIds == "<%= pair.first %>")
+  experiments <- sample_list %>% filter(groupIds == "<%= pair.last  %>")
+
+  comp_samples <- bind_rows(controls, experiments)
+  comp_study   <- exp_study[, comp_samples$sampleIds]
+
+  if(nrow(controls) > 1 && nrow(experiments) > 1) {
+    comp_study <- estimateCommonDisp(comp_study)
+    comp_study <- estimateTagwiseDisp(comp_study)
+  } else {
+    comp_study$common.dispersion <- <%= @dispersion %>
+  }
+
+  disp_table <- disp_table %>%
+    add_row(comp = "comp<%= num %>", dispersion = comp_study$common.dispersion)
+
+  et <- exactTest(comp_study, pair=c(<%= to_strings(pair) %>))
+  tTags <- topTags(et, n = NULL)
+  result_table <- as_tibble(rownames_to_column(as.data.frame(tTags), "GeneSymbol"))
+  colnames(result_table) <- c("GeneSymbol",
+                              "comp<%= num %>_logFC",  "comp<%= num %>_logCPM",
+                              "comp<%= num %>_PValue", "comp<%= num %>_FDR")
+  write_tsv(result_table, "./results/comp<%= num %>.edgeR.DE_results")
+
+  #ncScatterPlot(nc, <%= to_strings(pair) %>)
   myPlotSmear(et, <%= to_strings(pair) %>)
 <% end %>
+
+write_tsv(disp_table, "dispersions.txt")
