--- a/results_format.r.erb
+++ b/results_format.r.erb
@@ -19,7 +19,7 @@ annotation <- read_tsv("./annotation.txt")
   group1_ids <- filter(sample_list, group_id == "<%= pair.first %>")$sample_id
   group2_ids <- filter(sample_list, group_id == "<%= pair.last  %>")$sample_id
   comp_pair  <- c(group1_ids, group2_ids)
-  comp_data  <- select(data, c("GeneSymbol", comp_pair))
+  comp_data  <- select(data, c("GeneSymbol", all_of(comp_pair)))
   comp_data_with_annot <- left_join(comp_data, annotation)
   
   result_deg_by_PValue <- inner_join(deg_by_PValue, comp_data_with_annot)
