--- a/results_format.r.erb
+++ b/results_format.r.erb
@@ -26,11 +26,11 @@ annotation <- read_tsv("./annotation.txt")
   result_deg_by_logFC  <- inner_join(deg_by_logFC,  comp_data_with_annot)
   detected_genes       <- inner_join(sorted_result, comp_data_with_annot)
   
-  write_tsv(result_deg_by_PValue, "./results/comp<%= num %>_result_deg_by_PValue.tsv")
-  write_tsv(result_deg_by_logFC,  "./results/comp<%= num %>_result_deg_by_logFC.tsv")
-  write_tsv(detected_genes,       "./results/comp<%= num %>_detected_genes.tsv")
+  write_tsv(result_deg_by_PValue, "./results/comp<%= num %>_result_deg_by_PValue<%= date_string %>.tsv")
+  write_tsv(result_deg_by_logFC,  "./results/comp<%= num %>_result_deg_by_logFC<%= date_string %>.tsv")
+  write_tsv(detected_genes,       "./results/comp<%= num %>_detected_genes<%= date_string %>.tsv")
 <% end %>
 
 all_results <- left_join(all_data, annotation)
-write_tsv(all_results, "./results/all_results.tsv")
+write_tsv(all_results, "./results/all_results<%= date_string %>.tsv")
 
