--- a/volcano_plot.r.erb
+++ b/volcano_plot.r.erb
@@ -8,7 +8,7 @@ logfc_threshold <- log2(fc_threshold)
 annotation <- read_tsv("./annotation.txt") %>% 
 	      mutate("GeneSymbol" = if_else(is.na(GeneSymbol), "<%= uniq_id %>", GeneSymbol))
 
-gene_list <- read_tsv("./gene_list.txt") %>% mutate("marker" = "yes")
+gene_list <- read_tsv("./<%= gene_list %>.txt") %>% mutate("marker" = "yes")
 
 <% comp_list.each do |num, pair| %>
 
@@ -17,6 +17,6 @@ gene_list <- read_tsv("./gene_list.txt") %>% mutate("marker" = "yes")
 		inner_join(annotation)
   
   plot_data <- create_volcano_data(de_results, gene_list, logfc_threshold)
-  create_volcano_plot(plot_data, "comp<%= num %>", logfc_threshold)
+  create_volcano_plot(plot_data, paste("<%= gene_list %>","comp<%= num %>",sep="_"), logfc_threshold)
 
 <% end %>
