--- a/select_keyword_genes.r.erb
+++ b/select_keyword_genes.r.erb
@@ -1,6 +1,6 @@
 library(tidyverse)
 
-all_results <- read_tsv("./results/<%= result_file %>")
+all_results <- read_tsv("<%= result_file %>")
 
 concat_go_results <- all_results %>%
   mutate(GO_BP = if_else(is.na(GO_BiologicalProcess), "", GO_BiologicalProcess)) %>%
