--- a/pca_script.r.erb
+++ b/pca_script.r.erb
@@ -13,9 +13,8 @@ color_list <- group_list %>% mutate("color" = hue_pal()(nrow(group_list)))
 sample_with_color <- sample_list %>% inner_join(color_list)
 
 colors <- sample_with_color$color
-
-pca_result <- prcomp(na.omit(log2(x+1)), scale.=TRUE)
-pca_data <- pca_result$rotation[,1:3]
+pca_result <- prcomp(na.omit(log1p(t(x))), scale.=TRUE)
+pca_data <- pca_result$x[,1:3]
 result_data <- rownames_to_column(as.data.frame(pca_data), "sample_id")
 write_tsv(result_data, "pca_data_<%= date_string %>.tsv")
 
