--- a/heatmap_keyword_genes.r.erb
+++ b/heatmap_keyword_genes.r.erb
@@ -8,8 +8,13 @@ sample_list <- read_tsv("sample_list.txt", col_names = c("sampleId", "groupId"))
 list_file     <- "list_<%= clean_name(keyword) %>.tsv"
 heatmap_name  <- paste("<%= clean_name(keyword) %>", "_genes", sep = "")
 
-heatmap_data <- read_tsv(list_file) %>%
+list_data    <- read_tsv(list_file)
+heatmap_data <- list_data %>%
   select(GeneSymbol, sample_list$sampleId)
 
-generate_heatmaps(heatmap_data, heatmap_name, "small")
-generate_heatmaps(heatmap_data, heatmap_name, "large")
+row_index <- generate_heatmaps(heatmap_data, heatmap_name, "small")
+row_index <- generate_heatmaps(heatmap_data, heatmap_name, "large")
+
+ordered_result <- list_data[rev(row_index),]
+result_file    <- "heatmap/<%= clean_name(keyword) %>_result_ordered.tsv"
+write_tsv(ordered_result, result_file)
