--- a/volcano_plot.r.erb
+++ b/volcano_plot.r.erb
@@ -6,13 +6,13 @@ fc_threshold <- 2
 logfc_threshold <- log2(fc_threshold)
 
 annotation <- read_tsv("./annotation.txt") %>%
-  mutate("GeneSymbol" = if_else(is.na(GeneSymbol), "<%= uniq_id %>", GeneSymbol))
+  mutate("GeneSymbol" = if_else(is.na(GeneSymbol), "<%= @uniq_id %>", GeneSymbol))
 
-gene_list <- read_tsv("<%= list_file %>") %>% mutate("marker" = "yes")
+gene_list <- read_tsv("<%= @list_file %>") %>% mutate("marker" = "yes")
 
 <% comp_list.each do |num, pair| %>
   de_results <- read_tsv("results/comp<%= num %>.edgeR.DE_results") %>%
-   rename("<%= uniq_id %>" = GeneID) %>%
+   rename("<%= @uniq_id %>" = GeneID) %>%
    inner_join(annotation)
 
   plot_data <- create_volcano_data(de_results, gene_list, logfc_threshold)
