add i option to make_heatmap_from_list

--- a/heatmap_list_genes.r.erb
+++ b/heatmap_list_genes.r.erb
@@ -10,6 +10,7 @@ heatmap_name  <- "<%= list_name %>_genes"
 
 list_data    <- read_tsv(list_file)
 heatmap_data <- list_data %>%
+  mutate("GeneSymbol" = if_else(is.na(GeneSymbol), <%= @uniq_id %>, GeneSymbol)) %>%
   select(GeneSymbol, sample_list$sampleId)
 
 row_index <- generate_heatmaps(heatmap_data, heatmap_name, "small")
